--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,8 @@
 # Metadata for your course
 
-title:          # a name for your Learning Lab course
+title:          My Amazing course
 tagline:        # a short description for your Learning Lab course, displayed on the course catalog
-description:    # a longer description for your Learning Lab course, displayed on the course's landing page
+description:    How i can write a learning lab
 
 # Repository setup
 # The following section template information for the repository
